@@ -11,6 +11,12 @@ dependencies {
   testImplementation(project(":instrumentation:apache-dubbo-2.7:testing"))
 
   testLibrary("org.apache.dubbo:dubbo-config-api:2.7.0")
-  latestDepTestLibrary("org.apache.dubbo:dubbo:2.+")
-  latestDepTestLibrary("org.apache.dubbo:dubbo-config-api:2.+")
+  latestDepTestLibrary("org.apache.dubbo:dubbo:2.+") // documented limitation
+  latestDepTestLibrary("org.apache.dubbo:dubbo-config-api:2.+") // documented limitation
+}
+
+tasks.withType<Test>().configureEach {
+  // to suppress non-fatal errors on jdk17
+  jvmArgs("--add-opens=java.base/java.math=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
 }
